@@ -7,7 +7,6 @@ import com.github.bestheroz.standard.common.exception.ExceptionCode;
 import com.github.bestheroz.standard.common.response.ApiResult;
 import com.github.bestheroz.standard.common.response.Result;
 import com.github.bestheroz.standard.common.util.AuthenticationUtils;
-import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 import javax.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
@@ -21,7 +20,6 @@ import org.springframework.web.bind.annotation.*;
 public class MemberController {
   @Resource
   private TableMemberRepository tableMemberRepository;
-
   @Resource
   private MemberRepository memberRepository;
 
@@ -34,8 +32,8 @@ public class MemberController {
   ResponseEntity<ApiResult> getMyInfo() {
     return Result.ok(
       this.tableMemberRepository.getItemByKey(
-          ImmutableMap.of("id", AuthenticationUtils.getUserPk())
-        )
+        Map.of("id", AuthenticationUtils.getUserPk())
+      )
         .map(
           item -> {
             item.setPassword(null);
@@ -56,8 +54,8 @@ public class MemberController {
     @RequestBody final TableMemberEntity payload
   ) {
     return this.tableMemberRepository.getItemByKey(
-        Map.of("id", AuthenticationUtils.getUserPk())
-      )
+      Map.of("id", AuthenticationUtils.getUserPk())
+    )
       .map(
         tableMemberEntity -> {
           final Pbkdf2PasswordEncoder pbkdf2PasswordEncoder = new Pbkdf2PasswordEncoder();
@@ -72,9 +70,9 @@ public class MemberController {
             throw new BusinessException(ExceptionCode.FAIL_MATCH_PASSWORD);
           }
           this.tableMemberRepository.updateMapByKey(
-              Map.of("name", payload.getName()),
-              Map.of("id", AuthenticationUtils.getUserPk())
-            );
+            Map.of("name", payload.getName()),
+            Map.of("id", AuthenticationUtils.getUserPk())
+          );
           return Result.ok();
         }
       )
@@ -92,8 +90,8 @@ public class MemberController {
     @RequestBody final Map<String, String> payload
   ) {
     return this.tableMemberRepository.getItemByKey(
-        Map.of("id", AuthenticationUtils.getUserPk())
-      )
+      Map.of("id", AuthenticationUtils.getUserPk())
+    )
       .map(
         tableMemberEntity -> {
           final Pbkdf2PasswordEncoder pbkdf2PasswordEncoder = new Pbkdf2PasswordEncoder();
@@ -108,9 +106,9 @@ public class MemberController {
             throw new BusinessException(ExceptionCode.FAIL_MATCH_OLD_PASSWORD);
           }
           this.tableMemberRepository.updateMapByKey(
-              Map.of("password", payload.get("newPassword")),
-              Map.of("id", AuthenticationUtils.getUserPk())
-            );
+            Map.of("password", payload.get("newPassword")),
+            Map.of("id", AuthenticationUtils.getUserPk())
+          );
           return Result.ok();
         }
       )
@@ -128,14 +126,14 @@ public class MemberController {
     @RequestBody final Map<String, String> payload
   ) {
     return this.tableMemberRepository.getItemByKey(
-        Map.of("id", AuthenticationUtils.getUserPk())
-      )
+      Map.of("id", AuthenticationUtils.getUserPk())
+    )
       .map(
         tableMemberEntity -> {
           this.tableMemberRepository.updateMapByKey(
-              Map.of("theme", payload.get("theme")),
-              Map.of("id", AuthenticationUtils.getUserPk())
-            );
+            Map.of("theme", payload.get("theme")),
+            Map.of("id", AuthenticationUtils.getUserPk())
+          );
           return Result.ok();
         }
       )
